labs/lab12/loadbalancer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userX-loadbalancer-ingress
  labels:
    owner: userX
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "balanced"
    nginx.ingress.kubernetes.io/session-cookie-name: "userX-session"
    nginx.ingress.kubernetes.io/session-cookie-expires: "86400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "86400"
spec:
  rules:
  - host: userX-lb.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: userX-frontend-service
            port:
              number: 80
